--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/DunningSecure
-    username: root
-    password: root2022
+    url: jdbc:mariadb://localhost:3306/DemoTest
+    username: test
+    password: test
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
@@ -17,6 +17,6 @@ springdoc:
   api-docs:
     path: /api-docs
   swagger-ui:
-    path: /dunning.html
+    path: /demo.html
     operations-sorter: method
     enabled: true
